[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.5",
    "streamlit-folium>=0.24.1",
    "streamlit>=1.44.1",
    "branca>=0.8.1",
    "pandas>=2.2.3",
    "pytz>=2025.2",
    "plotly>=6.0.1",
    "numpy>=2.2.4",
    "requests>=2.32.3",
    "matplotlib>=3.10.1",
]
