[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.5",
    "streamlit-folium>=0.24.1",
    "streamlit>=1.44.1",
    "branca>=0.8.1",
    "pandas>=2.2.3",
    "pytz>=2025.2",
    "plotly>=6.0.1",
    "numpy>=2.2.4",
    "requests>=2.32.3",
    "matplotlib>=3.10.1",
    "trafilatura>=2.0.0",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "scipy>=1.15.2",
    "beautifulsoup4>=4.13.4",
    "pillow>=11.2.1",
    "tropycal>=1.3",
    "siphon>=0.10.0",
    "metpy>=1.6.3",
    "shapely>=2.1.0",
    "sharppy>=1.4.0a3",
]
